--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Correção do solo</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 0,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 24
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">Correção de solo</div>
+        <div class="hamburguer">
+            <div class="line"</div>
+            <div class="line"</div>
+            <div class="line"</div>
+        </div>
+
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="">Contexto</a></li>
+                <li><a href="">Funcionamento</a></li>
+                <li><a href="">Tipos</a></li>
+                <li><a href="">Tabelas</a></li>
+                <li><a href="">Referências</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
