--- a/index.html
+++ b/index.html
@@ -35,5 +35,14 @@
             </ul>
         </nav>
     </header>
+
+    <script>
+        hamburguer = document.querySelector(".hamburguer");
+        hamburguer.onclick = function() {
+            navBar = document.querySelector(".nav-bar");
+            navBar.classList.toggle("acctive");
+        }
+    </script>
+                
 </body>
 </html>
