--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-                
+        <div class="correcao">CORREÇÃO</div> <div class="de">DE</div> <div class="solo">SOLO</div>
 </body>
 </html>
