--- a/index.html
+++ b/index.html
@@ -7,19 +7,29 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="variaveis.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <style>
-        .material-symbols-outlined {
-          font-variation-settings:
-          'FILL' 0,
-          'wght' 400,
-          'GRAD' 0,
-          'opsz' 24
-        }
-    </style>
 </head>
 <body>
        <header>
-            <div class="correcao">CORREÇÃO</div> <div class="de">DE</div> <div class="solo">SOLO</div>
+            <h1>CORREÇÃO DO SOLO</h1>
+
+            <section class="menu">
+                <ul>
+                     <li><button class="inicio"><span class="material-symbols-outlined">home</span> <p>Início</p> </button></li>
+                    <li><button class="graico"><span class="material-symbols-outlined">bar_chart</span> <p>Gráficos</p> </button></li>
+                    <li><button class="menu-abri"><span class="material-symbols-outlined">menu</span></button></li>
+                    <li><button class="menu-fechar"><span class="material-symbols-outlined">close</span></button></li>
+                </ul> 
+
+                <div class="menu-2">
+                    <ul>
+                        <li><a href="#"></a>Contexto</li>
+                        <li><a href="#"></a>Como funciona</li>
+                        <li><a href="#"></a>Tipos</li>
+                    </ul>
+                </div>
+                
+            </section>
+           
        </header>
 </body>
 </html>
