--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Correção do solo</title>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="variaveis.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>Site Responsivo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-       <header>
-            <h1>CORREÇÃO DO SOLO</h1>
+    <header>
+        <div class="logo">Meu Site</div>
+        <div class="menu-icon" onclick="toggleMenu()">☰</div>
+        <nav id="menu">
+            <ul>
+                <li><a href="#">Item 1</a></li>
+                <li><a href="#">Item 2</a></li>
+                <li><a href="#">Item 3</a></li>
+            </ul>
+        </nav>
+    </header>
 
-            <section class="menu">
-                <ul>
-                     <li><button class="inicio"><span class="material-symbols-outlined">home</span> <p>Início</p> </button></li>
-                    <li><button class="graico"><span class="material-symbols-outlined">bar_chart</span> <p>Gráficos</p> </button></li>
-                    <li><button class="menu-abri"><span class="material-symbols-outlined">menu</span></button></li>
-                    <li><button class="menu-fechar"><span class="material-symbols-outlined">close</span></button></li>
-                </ul> 
+    <div class="slider">
+        <div class="slide active" style="background-image: url('image1.jpg');"></div>
+        <div class="slide" style="background-image: url('image2.jpg');"></div>
+        <div class="slide" style="background-image: url('image3.jpg');"></div>
+        <div class="slide" style="background-image: url('image4.jpg');"></div>
+        <div class="slide" style="background-image: url('image5.jpg');"></div>
+    </div>
 
-                <div class="menu-2">
-                    <ul>
-                        <li><a href="#"></a>Contexto</li>
-                        <li><a href="#"></a>Como funciona</li>
-                        <li><a href="#"></a>Tipos</li>
-                    </ul>
-                </div>
-                
-            </section>
-           
-       </header>
+    <footer>
+        &copy; 2024 Meu Site. Todos os direitos reservados.
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
