--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Responsivo</title>
+    <title>Nomad</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,19 +12,19 @@
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <nav id="menu">
             <ul>
-                <li><a href="#">Item 1</a></li>
-                <li><a href="#">Item 2</a></li>
-                <li><a href="#">Item 3</a></li>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Pacotes</a></li>
+                <li><a href="#">Planejamento</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="slider">
-        <div class="slide active" style="background-image: url('image1.jpg');"></div>
-        <div class="slide" style="background-image: url('image2.jpg');"></div>
-        <div class="slide" style="background-image: url('image3.jpg');"></div>
-        <div class="slide" style="background-image: url('image4.jpg');"></div>
-        <div class="slide" style="background-image: url('image5.jpg');"></div>
+        <div class="slide active" style="background-image: url('boston.png');"></div>
+        <div class="slide" style="background-image: url('canada.png');"></div>
+        <div class="slide" style="background-image: url('chile.png');"></div>
+        <div class="slide" style="background-image: url('india.png');"></div>
+        <div class="slide" style="background-image: url('japao.png');"></div>
     </div>
 
     <footer>
