--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     
     <main>
         <section class="pacotes">
-		<h2>Pacotes</h2>
+		<h1>Pacotes</h1>
 		<section class="aereo-hotel">
-			<p>Aéreo + Hotel</p>
+			<h2>Aéreo + Hotel</h2>
         		<ul class="gallery">
 	        		<li style="background: #f6bd60;"></li>
 	        		<li style="background: #f7ede2;"></li>
@@ -42,7 +42,7 @@
         		</ul>
 		</section>
 		<section class="completo">
-			<p>Completo</p>
+			<h2>Completo</h2>
 			<ul class="gallery">
 	        		<li style="background: #f6bd60;"></li>
 	        		<li style="background: #f7ede2;"></li>
