--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
           </label>
           <div class="nav-mobile w3-animate-right">
             <a href=".inicio">Ínicio</a>
-            <a href=".pacotes">Pacotes</a>
+            <a href="#pacotes">Pacotes</a>
           </div>
         </nav>
 	    
     </header>
     
     <main>
-        <section class="pacotes">
+        <section id="pacotes">
 		
 		<h1>Pacotes</h1>
 		
