--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <i class="fas fa-bars"></i>
           </label>
           <div class="nav-mobile w3-animate-right">
-            <a href="#inicio">Ínicio</a>
-            <a href="#pacotes">Pacotes</a>
+            <button id="inicio-botao">Ínicio</button>
+            <button id="pacotes-botao">Pacotes</button>
           </div>
         </nav>
 	    
@@ -47,11 +47,11 @@
 			<h2>Aéreo + Hotel</h2>
 			
         		<ul class="gallery">
-	        		<li><button type="button"><img src="boston.png"></button></li>
-	        		<li><button type="button"><img src="canada.png"></button></li>
-	        		<li><button type="button"><img src="chile.png"></button></li>
-	        		<li><button type="button"><img src="india.png"></button></li>
-	        		<li><button type="button"><img src="japao.png"></button></li>
+	        		<li><img src="boston.png"></li>
+	        		<li><img src="canada.png"></li>
+	        		<li><img src="chile.png"></li>
+	        		<li><img src="india.png"></li>
+	        		<li><img src="japao.png"></li>
         		</ul>
 		</section>
 		
