--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <i class="fas fa-bars"></i>
           </label>
           <div class="nav-mobile w3-animate-right">
-            <button id="inicio-botao">Ínicio</button>
+            <a id="inicio-botao">Ínicio</a>
             <button id="pacotes-botao">Pacotes</button>
           </div>
         </nav>
