--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </label>
           <div class="nav-mobile w3-animate-right">
             <a id="inicio-botao">Ínicio</a>
-            <button id="pacotes-botao">Pacotes</button>
+            <a id="pacotes-botao">Pacotes</a>
           </div>
         </nav>
 	    
