--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 			<h2>Aéreo + Hotel</h2>
 			
         		<ul class="gallery">
-	        		<li><img src="boston.png"></li>
-	        		<li><img src="canada.png"></li>
-	        		<li><img src="chile.png"></li>
-	        		<li><img src="india.png"></li>
-	        		<li><img src="japao.png"></li>
+	        		<li><img src="Img/boston.png"></li>
+	        		<li><img src="Img/canada.png"></li>
+	        		<li><img src="Img/chile.png"></li>
+	        		<li><img src="Img/india.png"></li>
+	        		<li><img src="Img/japao.png"></li>
         		</ul>
 		</section>
 		
