--- a/index.html
+++ b/index.html
@@ -33,10 +33,18 @@
 	<section id="inicio">
 		
 		<section class="quem-somos">
-			<h1>Quem somos:</h1>
+			<h1>Nossa história</h1>
 
-			<p>gdnffbbjdkfbgg</p>
+			<p>A Nomad começou em 1968, quando inauguramos nossa primeira unidade em Santa Catarina, na cidade de Piçarras. No verão daquele mesmo ano, inúmeras famílias se associaram e se hospedaram nesta primeira unidade, marcando o início do sucesso e aceitação da nossa proposta.</p>
+			<p>A aquisição e a construção de novas unidades foi ampliando as opções para nossos associados viajarem e conhecerem novos lugares pelo Brasil. Hoje, a Nomad conta com dezenas de unidades próprias oferecendo os preços mais competitivos do mercado, concretizando viagens e férias maravilhosas para centenas de milhares de famílias associadas!</p>
+			<p>A Nomad busca inovar sempre, rompendo as barreiras do Brasil e alcançando o mundo inteiro! O portal do associado oferece uma rede com mais de 500 mil opções de hospedagens distribuídas pelos cinco continentes. Além disso, nossos associados contam também com um aplicativo exclusivo que permite realizar reservas e acessar os serviços do clube pelo celular.</p>
 		</section>
+
+		<ul class="gallery">
+	        	<li style="background: #f6bd60;"><p>Nossa missão é proporcionar à família, férias e passeios turísticos com qualidade e com baixo custo.</p></li>
+	        	<li style="background: #f7ede2;"><p>Queremos atender expectativas oferecendo viagens e outros serviços com eficiência e competência.</p></li>
+	        	<li style="background: #f5cac3;"><p>Nossos valores estão baseados na ética, solidez, credibilidade, respeito mútuo e na tradição que conquistamos em todos esses anos.</p></li>
+        	</ul>
 		
 	</section>
 	    
@@ -49,11 +57,11 @@
 			<h2>Aéreo + Hotel</h2>
 			
         		<ul class="gallery">
-	        		<li><img src="Img/boston.png"></li>
-	        		<li><img src="Img/canada.png"></li>
-	        		<li><img src="Img/chile.png"></li>
-	        		<li><img src="Img/india.png"></li>
-	        		<li><img src="Img/japao.png"></li>
+	        		<li><a class="boston"><img src="Img/boston.png"></a></li>
+	        		<li><a class="canada"><img src="Img/canada.png"></a></li>
+	        		<li><a class="chile"><img src="Img/chile.png"></a></li>
+	        		<li><a class="india"><img src="Img/india.png"></a></li>
+	        		<li><a class="japao"><img src="Img/japao.png"></a></li>
         		</ul>
 		</section>
 		
@@ -67,6 +75,29 @@
 	        		<li style="background: #f5cac3;"></li>
 	        		<li style="background: #84a59d;"></li>
 	        		<li style="background: #f28482;"></li>
+        		</ul>
+		</section>
+
+		<section class="nacional">
+			
+			<h2>Nacional</h2>
+			
+			<ul class="gallery">
+	        		<li><a class="balneario-camboriu"><img src=""></a></li>
+	        		<li><a class="balneario-picarras"><img src=""></a></li>
+	        		<li><a class="bombinhas"><img src=""></a></li>
+	        		<li><a class="florianopolis"><img src=""></a></li>
+	        		<li><a class="garopaba"><img src=""></a></li>
+				<li><a class="foz-do-iguacu"><img src=""></a></li>
+				<li><a class="guaratuba"><img src=""></a></li>
+				<li><a class="matinhos"><img src=""></a></li>
+				<li><a class="canela"><img src=""></a></li>
+				<li><a class="capao-da-canoa"><img src=""></a></li>
+				<li><a class="guaruja"><img src=""></a></li>
+				<li><a class="ubatuba"><img src=""></a></li>
+				<li><a class="bonito"><img src=""></a></li>
+				<li><a class="corumba"><img src=""></a></li>
+				<li><a class="natal"><img src=""></a></li>
         		</ul>
 		</section>
 		
