--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 			<h2>Aéreo + Hotel</h2>
 			
         		<ul class="gallery">
-	        		<li><a class="boston"><img src="Img/boston.png"></a></li>
-	        		<li><a class="canada"><img src="Img/canada.png"></a></li>
-	        		<li><a class="chile"><img src="Img/chile.png"></a></li>
-	        		<li><a class="india"><img src="Img/india.png"></a></li>
-	        		<li><a class="japao"><img src="Img/japao.png"></a></li>
+	        		<li><a id="boston"><img src="Img/boston.png"></a></li>
+	        		<li><a id="canada"><img src="Img/canada.png"></a></li>
+	        		<li><a id="chile"><img src="Img/chile.png"></a></li>
+	        		<li><a id="india"><img src="Img/india.png"></a></li>
+	        		<li><a id="japao"><img src="Img/japao.png"></a></li>
         		</ul>
 		</section>
 		
@@ -83,21 +83,21 @@
 			<h2>Nacional</h2>
 			
 			<ul class="gallery">
-	        		<li><a class="balneario-camboriu"><img src=""></a></li>
-	        		<li><a class="balneario-picarras"><img src=""></a></li>
-	        		<li><a class="bombinhas"><img src=""></a></li>
-	        		<li><a class="florianopolis"><img src=""></a></li>
-	        		<li><a class="garopaba"><img src=""></a></li>
-				<li><a class="foz-do-iguacu"><img src=""></a></li>
-				<li><a class="guaratuba"><img src=""></a></li>
-				<li><a class="matinhos"><img src=""></a></li>
-				<li><a class="canela"><img src=""></a></li>
-				<li><a class="capao-da-canoa"><img src=""></a></li>
-				<li><a class="guaruja"><img src=""></a></li>
-				<li><a class="ubatuba"><img src=""></a></li>
-				<li><a class="bonito"><img src=""></a></li>
-				<li><a class="corumba"><img src=""></a></li>
-				<li><a class="natal"><img src=""></a></li>
+	        		<li><a id="balneario-camboriu"><img src=""></a></li>
+	        		<li><a id="balneario-picarras"><img src=""></a></li>
+	        		<li><a id="bombinhas"><img src=""></a></li>
+	        		<li><a id="florianopolis"><img src=""></a></li>
+	        		<li><a id="garopaba"><img src=""></a></li>
+				<li><a id="foz-do-iguacu"><img src=""></a></li>
+				<li><a id="guaratuba"><img src=""></a></li>
+				<li><a id="matinhos"><img src=""></a></li>
+				<li><a id="canela"><img src=""></a></li>
+				<li><a id="capao-da-canoa"><img src=""></a></li>
+				<li><a id="guaruja"><img src=""></a></li>
+				<li><a id="ubatuba"><img src=""></a></li>
+				<li><a id="bonito"><img src=""></a></li>
+				<li><a id="corumba"><img src=""></a></li>
+				<li><a id="natal"><img src=""></a></li>
         		</ul>
 		</section>
 		
