adicionada a descricao da empresa

--- a/index.html
+++ b/index.html
@@ -33,19 +33,59 @@
 	<section id="inicio">
 		
 		<section class="quem-somos">
-			<h1>Nossa história</h1>
+			<h1>Sobre nós</h1>
 
-			<p>A Nomad começou em 1968, quando inauguramos nossa primeira unidade em Santa Catarina, na cidade de Piçarras. No verão daquele mesmo ano, inúmeras famílias se associaram e se hospedaram nesta primeira unidade, marcando o início do sucesso e aceitação da nossa proposta.</p>
-			<p>A aquisição e a construção de novas unidades foi ampliando as opções para nossos associados viajarem e conhecerem novos lugares pelo Brasil. Hoje, a Nomad conta com dezenas de unidades próprias oferecendo os preços mais competitivos do mercado, concretizando viagens e férias maravilhosas para centenas de milhares de famílias associadas!</p>
-			<p>A Nomad busca inovar sempre, rompendo as barreiras do Brasil e alcançando o mundo inteiro! O portal do associado oferece uma rede com mais de 500 mil opções de hospedagens distribuídas pelos cinco continentes. Além disso, nossos associados contam também com um aplicativo exclusivo que permite realizar reservas e acessar os serviços do clube pelo celular.</p>
+			<p>A Nomad é uma empresa de turismo dedicada a transformar suas viagens em experiências inesquecíveis. Com sede no coração da cidade, somos apaixonados por descobrir novos destinos e proporcionar a você uma jornada perfeita, desde a escolha do destino até o retorno para casa.
+			</p>
+
+			<h2>Nossa missão </h2>
+
+			<p>Nossa missão é simplificar o planejamento da sua viagem, oferecendo soluções completas e personalizadas em hospedagem e passagens aéreas, garantindo conforto, segurança e as melhores condições para você explorar o mundo sem preocupações.
+			</p>
+
+			<h2>O que oferecemos:</h2>
+
+			<ul>
+				<li>Hospedagem: Trabalhamos com uma vasta rede de hotéis, resorts e pousadas ao redor do mundo, garantindo acomodações de qualidade para todos os gostos e orçamentos. Seja uma escapada romântica, uma viagem em família ou uma aventura solo, temos a hospedagem perfeita para você.
+				</li>
+
+				<li>Passagens Aéreas: Oferecemos as melhores tarifas em passagens aéreas, com opções flexíveis e personalizadas. Nosso objetivo é encontrar a melhor rota e preço para que você possa chegar ao seu destino dos sonhos da forma mais conveniente e econômica possível.
+				</li>
+			</ul>
+
+			<h2>Nosso diferencial:</h2>
+
+			<p>Na Nomad, acreditamos que cada viagem é única. Por isso, oferecemos atendimento personalizado, cuidando de cada detalhe do seu roteiro. Nosso time de especialistas em viagens está sempre à disposição para oferecer as melhores dicas e suporte, antes, durante e depois da sua viagem.
+			</p>
+
+			<h2>Para quem somos:</h2>
+
+			<p>Nossos serviços são destinados a todos que compartilham da nossa paixão por explorar o mundo. Atendemos desde aventureiros solitários até grandes grupos familiares, sempre com o mesmo compromisso de qualidade e satisfação.
+			</p>
+
+			<h2>Nossos valores:</h2>
+
+			<p>Comprometemo-nos com a sustentabilidade e responsabilidade social, promovendo práticas de turismo que respeitem o meio ambiente e as culturas locais. Valorizamos a transparência, a integridade e o respeito em todas as nossas relações.</p>
+			
+			<h2>Contato</h2>
+
+			<p>Estamos prontos para planejar sua próxima aventura! Entre em contato conosco pelo telefone (+55) 44 99874-9208 ou pelo e-mail nomad.turismo7492@gmail.com. Siga-nos nas redes sociais para acompanhar nossas novidades e promoções exclusivas:
+			</p>
+
+			<ul>
+				<li>Facebook: @Nomad_turismo
+				</li>
+				<li>Instagram: @Nomad
+				</li>
+				<li>Twitter: @Nomad_Travel
+				</li>
+			</ul>
+
+			<p>Venha explorar o mundo com a Nomad. Explorar é viver!	
+			</p>
+
 		</section>
 
-		<ul class="gallery">
-	        	<li style="background: #f6bd60;"><p>Nossa missão é proporcionar à família, férias e passeios turísticos com qualidade e com baixo custo.</p></li>
-	        	<li style="background: #f7ede2;"><p>Queremos atender expectativas oferecendo viagens e outros serviços com eficiência e competência.</p></li>
-	        	<li style="background: #f5cac3;"><p>Nossos valores estão baseados na ética, solidez, credibilidade, respeito mútuo e na tradição que conquistamos em todos esses anos.</p></li>
-        	</ul>
-		
 	</section>
 	    
         <section id="pacotes">
