--- a/index.html
+++ b/index.html
@@ -123,21 +123,21 @@
 			<h2>Nacional</h2>
 			
 			<ul class="gallery">
-	        		<li><a id="balneario-camboriu"><img src=""></a></li>
-	        		<li><a id="balneario-picarras"><img src=""></a></li>
-	        		<li><a id="bombinhas"><img src=""></a></li>
-	        		<li><a id="florianopolis"><img src=""></a></li>
-	        		<li><a id="garopaba"><img src=""></a></li>
-				<li><a id="foz-do-iguacu"><img src=""></a></li>
-				<li><a id="guaratuba"><img src=""></a></li>
-				<li><a id="matinhos"><img src=""></a></li>
-				<li><a id="canela"><img src=""></a></li>
-				<li><a id="capao-da-canoa"><img src=""></a></li>
-				<li><a id="guaruja"><img src=""></a></li>
-				<li><a id="ubatuba"><img src=""></a></li>
-				<li><a id="bonito"><img src=""></a></li>
-				<li><a id="corumba"><img src=""></a></li>
-				<li><a id="natal"><img src=""></a></li>
+	        	<li><a id="balneario-camboriu"><img src="Img/balneario-camboriu.png"></a></li>
+	        	<li><a id="balneario-picarras"><img src="Img/balneario-picarras.png"></a></li>
+	        	<li><a id="bombinhas"><img src="Img/bombinhas.png"></a></li>
+	        	<li><a id="florianopolis"><img src="Img/florianopolis.png"></a></li>
+	        	<li><a id="garopaba"><img src="Img/garopaba.png"></a></li>
+				<li><a id="foz-do-iguacu"><img src="Img/foz-do-iguacu.png"></a></li>
+				<li><a id="guaratuba"><img src="Img/guaratuba.png"></a></li>
+				<li><a id="matinhos"><img src="Img/matinhos.png"></a></li>
+				<li><a id="canela"><img src="Img/canela.png"></a></li>
+				<li><a id="capao-da-canoa"><img src="Img/capao-da-canoa.png"></a></li>
+				<li><a id="guaruja"><img src="Img/guaruja.png"></a></li>
+				<li><a id="ubatuba"><img src="Img/ubatuba.png"></a></li>
+				<li><a id="bonito"><img src="Img/bonito.png"></a></li>
+				<li><a id="corumba"><img src="Img/corumba.png"></a></li>
+				<li><a id="natal"><img src="Img/natal.png"></a></li>
         		</ul>
 		</section>
 		
