--- a/index.html
+++ b/index.html
@@ -110,11 +110,13 @@
 			<h2>Completo</h2>
 			
 			<ul class="gallery">
-	        		<li style="background: #f6bd60;"></li>
-	        		<li style="background: #f7ede2;"></li>
-	        		<li style="background: #f5cac3;"></li>
-	        		<li style="background: #84a59d;"></li>
-	        		<li style="background: #f28482;"></li>
+	        		<li><a id="bali"><img src=""></a></li>
+	        		<li><a id="dubai"><img src=""></a></li>
+	        		<li><a id="maldivas"><img src=""></a></li>
+	        		<li><a id="noruega"><img src=""></a></li>
+	        		<li><a id="roma"><img src=""></a></li>
+					<li><a id="paris"><img src=""></a></li>
+					<li><a id="londres"><img src=""></a></li>
         		</ul>
 		</section>
 
