--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 			<h2>Completo</h2>
 			
 			<ul class="gallery">
-	        		<li><a id="bali"><img src=""></a></li>
-	        		<li><a id="dubai"><img src=""></a></li>
-	        		<li><a id="maldivas"><img src=""></a></li>
-	        		<li><a id="noruega"><img src=""></a></li>
-	        		<li><a id="roma"><img src=""></a></li>
-					<li><a id="paris"><img src=""></a></li>
-					<li><a id="londres"><img src=""></a></li>
+	        		<li><a id="bali"><img src="Img/bali.png"></a></li>
+	        		<li><a id="dubai"><img src="Img/dubai.png"></a></li>
+	        		<li><a id="maldivas"><img src="Img/maldivas.png"></a></li>
+	        		<li><a id="noruega"><img src="Img/noruega.png"></a></li>
+	        		<li><a id="roma"><img src="Img/roma.png"></a></li>
+					<li><a id="paris"><img src="Img/paris.png"></a></li>
+					<li><a id="londres"><img src="Img/londres.png"></a></li>
         		</ul>
 		</section>
 
@@ -141,6 +141,56 @@
 				<li><a id="corumba"><img src="Img/corumba.png"></a></li>
 				<li><a id="natal"><img src="Img/natal.png"></a></li>
         		</ul>
+		</section>
+
+		<section id="boston-descricao">
+			<h1>Boston</h1>
+
+			<p>Boston é a capital e a maior cidade de Massachusetts. Fundada em 1630, é uma das mais antigas cidades do EUA. O papel fundamental que Boston desempenhou na Revolução Americana é um dos destaques da Freedom Trail, percurso a pé de 4 quilômetros por locais que contam a história da fundação da nação. Em uma das paradas, a antiga casa de reunião Faneuil Hall, há um mercado popular. </p>
+			
+			<h2>Pacote</h2>
+
+			<p>O pacote para Bosto incluí: </p>
+
+			<ul>
+				<li>Suporte para 2 pessoas</li>
+				<li>Passagem de avião: R$13200</li>
+					<ul>
+						<li>Duas bagagens de despacho (23kg) por passageiro</li>
+						<li>Bagagem de mão (10kg)</li>
+						<li>Snacks a vontade</li>
+						<li>Antecipação de assento</li>
+						<li>Duas conexões</li>
+						<li>Ida:</li>
+							<ul>
+								<li>Duração(voo) e 23h e 2m</li>
+								<li>Data(ida): 23/12</li>
+								<li>Horário(ida): 15:00</li>
+								<li>Data(chegada): 24/12</li>
+								<li>Horário(chegada): 12:02</li>
+							</ul>
+						<li>Volta:</li>
+							<ul>
+								<li>Duração(voo) e 23h e 38m</li>
+								<li>Data(ida): 28/12</li>
+								<li>Horário(ida): 12:42</li>
+								<li>Data(chegada): 29/12</li>
+								<li>Horário(chegada): 14:20</li>
+							</ul>
+
+					</ul>
+				<li>Hospedagem por R$4000 que incluí as seguintes comodidades:</li>
+					<ul>
+						<li>Piscina</li>
+						<li>Estacionamento</li>
+						<li>Internet</li>
+						<li>Frigobar</li>
+						<li>Ar-condicionado</li>
+						<li>Acadêmia</li>
+						<li>Spa</li>
+						<li>Aceita animais de estimação</li>
+					</ul>
+			</ul>
 		</section>
 		
         </section>
