--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 			<h2>Aéreo + Hotel</h2>
 			
         		<ul class="gallery">
-	        		<li><a id="boston"><img src="Img/boston.png"></a></li>
-	        		<li><a id="canada"><img src="Img/canada.png"></a></li>
-	        		<li><a id="chile"><img src="Img/chile.png"></a></li>
-	        		<li><a id="india"><img src="Img/india.png"></a></li>
-	        		<li><a id="japao"><img src="Img/japao.png"></a></li>
+	        		<li><a id="boston"><img src="boston.png"></a></li>
+	        		<li><a id="canada"><img src="canada.png"></a></li>
+	        		<li><a id="chile"><img src="chile.png"></a></li>
+	        		<li><a id="india"><img src="india.png"></a></li>
+	        		<li><a id="japao"><img src="japao.png"></a></li>
         		</ul>
 		</section>
 		
@@ -110,13 +110,13 @@
 			<h2>Completo</h2>
 			
 			<ul class="gallery">
-	        		<li><a id="bali"><img src="Img/bali.png"></a></li>
-	        		<li><a id="dubai"><img src="Img/dubai.png"></a></li>
-	        		<li><a id="maldivas"><img src="Img/maldivas.png"></a></li>
-	        		<li><a id="noruega"><img src="Img/noruega.png"></a></li>
-	        		<li><a id="roma"><img src="Img/roma.png"></a></li>
-					<li><a id="paris"><img src="Img/paris.png"></a></li>
-					<li><a id="londres"><img src="Img/londres.png"></a></li>
+	        		<li><a id="bali"><img src="bali.png"></a></li>
+	        		<li><a id="dubai"><img src="dubai.png"></a></li>
+	        		<li><a id="maldivas"><img src="maldivas.png"></a></li>
+	        		<li><a id="noruega"><img src="noruega.png"></a></li>
+	        		<li><a id="roma"><img src="roma.png"></a></li>
+					<li><a id="paris"><img src="paris.png"></a></li>
+					<li><a id="londres"><img src="londres.png"></a></li>
         		</ul>
 		</section>
 
@@ -125,21 +125,21 @@
 			<h2>Nacional</h2>
 			
 			<ul class="gallery">
-	        	<li><a id="balneario-camboriu"><img src="Img/balneario-camboriu.png"></a></li>
-	        	<li><a id="balneario-picarras"><img src="Img/balneario-picarras.png"></a></li>
-	        	<li><a id="bombinhas"><img src="Img/bombinhas.png"></a></li>
-	        	<li><a id="florianopolis"><img src="Img/florianopolis.png"></a></li>
-	        	<li><a id="garopaba"><img src="Img/garopaba.png"></a></li>
-				<li><a id="foz-do-iguacu"><img src="Img/foz-do-iguacu.png"></a></li>
-				<li><a id="guaratuba"><img src="Img/guaratuba.png"></a></li>
-				<li><a id="matinhos"><img src="Img/matinhos.png"></a></li>
-				<li><a id="canela"><img src="Img/canela.png"></a></li>
-				<li><a id="capao-da-canoa"><img src="Img/capao-da-canoa.png"></a></li>
-				<li><a id="guaruja"><img src="Img/guaruja.png"></a></li>
-				<li><a id="ubatuba"><img src="Img/ubatuba.png"></a></li>
-				<li><a id="bonito"><img src="Img/bonito.png"></a></li>
-				<li><a id="corumba"><img src="Img/corumba.png"></a></li>
-				<li><a id="natal"><img src="Img/natal.png"></a></li>
+	        	<li><a id="balneario-camboriu"><img src="balneario-camboriu.png"></a></li>
+	        	<li><a id="balneario-picarras"><img src="balneario-picarras.png"></a></li>
+	        	<li><a id="bombinhas"><img src="bombinhas.png"></a></li>
+	        	<li><a id="florianopolis"><img src="florianopolis.png"></a></li>
+	        	<li><a id="garopaba"><img src="garopaba.png"></a></li>
+				<li><a id="foz-do-iguacu"><img src="foz-do-iguacu.png"></a></li>
+				<li><a id="guaratuba"><img src="guaratuba.png"></a></li>
+				<li><a id="matinhos"><img src="matinhos.png"></a></li>
+				<li><a id="canela"><img src="canela.png"></a></li>
+				<li><a id="capao-da-canoa"><img src="capao-da-canoa.png"></a></li>
+				<li><a id="guaruja"><img src="guaruja.png"></a></li>
+				<li><a id="ubatuba"><img src="ubatuba.png"></a></li>
+				<li><a id="bonito"><img src="bonito.png"></a></li>
+				<li><a id="corumba"><img src="corumba.png"></a></li>
+				<li><a id="natal"><img src="natal.png"></a></li>
         		</ul>
 		</section>
 
