--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
 
 		</section>
 
-		<section id="maldivas">
+		<section id="maldivas-descricao">
 			<h1>Maldivas</h1>
 			<p></p>
 
@@ -928,7 +928,7 @@
 
 		</section>
 
-		<section id="noruega">
+		<section id="noruega-descricao">
 			<h1>Noruega</h1>
 			<p></p>
 
@@ -965,7 +965,7 @@
 
 		</section>
 
-		<section id="rma-descricao">
+		<section id="roma-descricao">
 			<h1>Roma</h1>
 			<p></p>
 
