--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 			<h2>Aéreo + Hotel</h2>
 			
         		<ul class="gallery">
-	        		<li><a id="boston"><img src="boston.png"></a></li>
-	        		<li><a id="canada"><img src="canada.png"></a></li>
-	        		<li><a id="chile"><img src="chile.png"></a></li>
-	        		<li><a id="india"><img src="india.png"></a></li>
-	        		<li><a id="japao"><img src="japao.png"></a></li>
+	        		<li><a id="boston"><img src="2_20240708_172458_0001.png"></a></li>
+	        		<li><a id="canada"><img src="5_20240708_172458_0004.png"></a></li>
+	        		<li><a id="chile"><img src="4_20240708_172458_0003.png"></a></li>
+	        		<li><a id="india"><img src="1_20240708_172458_0000.png"></a></li>
+	        		<li><a id="japao"><img src="3_20240708_172458_0002.png"></a></li>
         		</ul>
 		
 		<section class="completo">
@@ -109,13 +109,13 @@
 			<h2>Completo</h2>
 			
 			<ul class="gallery">
-	        		<li><a id="bali"><img src="bali.png"></a></li>
-	        		<li><a id="dubai"><img src="dubai.png"></a></li>
-	        		<li><a id="maldivas"><img src="maldivas.png"></a></li>
-	        		<li><a id="noruega"><img src="noruega.png"></a></li>
-	        		<li><a id="roma"><img src="roma.png"></a></li>
-					<li><a id="paris"><img src="paris.png"></a></li>
-					<li><a id="londres"><img src="londres.png"></a></li>
+	        		<li><a id="bali"><img src="23_20240809_143555_0000.png"></a></li>
+	        		<li><a id="dubai"><img src="29_20240809_143555_0006.png"></a></li>
+	        		<li><a id="maldivas"><img src="24_20240809_143555_0001.png"></a></li>
+	        		<li><a id="noruega"><img src="25_20240809_143555_0002.png"></a></li>
+	        		<li><a id="roma"><img src="26_20240809_143555_0003.png"></a></li>
+					<li><a id="paris"><img src="27_20240809_143555_0004.png"></a></li>
+					<li><a id="londres"><img src="28_2024089_143555_0005.png"></a></li>
         		</ul>
 		</section>
 
@@ -124,18 +124,18 @@
 			<h2>Nacional</h2>
 			
 			<ul class="gallery">
-	        	<li><a id="balneario-camboriu"><img src="balneario-camboriu.png"></a></li>
-	        	<li><a id="balneario-picarras"><img src="balneario-picarras.png"></a></li>
-	        	<li><a id="bombinhas"><img src="bombinhas.png"></a></li>
-	        	<li><a id="florianopolis"><img src="florianopolis.png"></a></li>
-	        	<li><a id="garopaba"><img src="garopaba.png"></a></li>
-				<li><a id="foz-do-iguacu"><img src="foz-do-iguacu.png"></a></li>
+	        	<li><a id="balneario-camboriu"><img src="22_2024_172803_0016.png"></a></li>
+	        	<li><a id="balneario-picarras"><img src="21_20240807_172803_0015.png"></a></li>
+	        	<li><a id="bombinhas"><img src="20_20240807_172803_0014.png"></a></li>
+	        	<li><a id="florianopolis"><img src="19_20240807_172803_0013.png"></a></li>
+	        	<li><a id="garopaba"><img src="18_20240807_172803_0012.png"></a></li>
+				<li><a id="foz-do-iguacu"><img src="17_20240807_172803_0011.png"></a></li>
 				<li><a id="guaratuba"><img src="guaratuba.png"></a></li>
-				<li><a id="canela"><img src="canela.png"></a></li>
-				<li><a id="capao-da-canoa"><img src="capao-da-canoa.png"></a></li>
-				<li><a id="guaruja"><img src="guaruja.png"></a></li>
-				<li><a id="bonito"><img src="Img/bonito.png"></a></li>
-				<li><a id="natal"><img src="Img/natal.png"></a></li>
+				<li><a id="canela"><img src="14_20240807_172803_0008.png"></a></li>
+				<li><a id="capao-da-canoa"><img src="13_20240807_172803_0007.png"></a></li>
+				<li><a id="guaruja"><img src="11_20240807_172803_0005.png"></a></li>
+				<li><a id="bonito"><img src="9_20240807_172802_0003.png"></a></li>
+				<li><a id="natal"><img src="6_20240807_172802_0000.png"></a></li>
         		</ul>
 		</section>
 
